--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Type your title here</title>
+    <title>Rock Paper Scissors</title>
     <!-- Bootstrap Styles-->
     <link rel="stylesheet" href="resources/styles/bootstrap.min.css">
     <link rel="stylesheet" href="resources/styles/styles.css" />
@@ -13,6 +13,23 @@
 <body>
     <div class="container">
         <!-- WORK FROM INSIDE THIS CONTAINER-->
+        <h1>Rock Paper Scissors</h1>
+        <div id = "welcome-screen">
+            <form id = "name-form">
+                <div>
+                    <label for="username">Your Name</label>
+                    <input id = "username" placeholder = "Enter Name Here..." name = "username">
+                </div>
+                <button id = "start-game-button">
+                    Start Game!
+                </button>
+
+            </form>
+
+        </div>
+        <div id ="game-screen">
+
+        </div>
 
     </div>
 
