Fix index npm test problems

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p id ="score">User: 0 v CPU: 0</p>
             </div>
             <form id = "game-form">
-                <div class = "form-group"> <!-- confused by step 6 in part 2 I think it goes here-->
+                <div class = "form-group">
                     <label for = "user-selection">
                         Select your choice
                     </label>
@@ -42,9 +42,10 @@
                         <option value="Paper">Paper</option>
                         <option value="Scissors">Scissors</option>
                     </select>
-                    <button id = "go-button" class = "btn btn-success">Go!</button>
-                
                 </div>
+                <button class = "btn btn-success" id = "go-button">
+                    Go!
+                </button>
             </form>
             <p id = "game-history"></p>
         </div>
