--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Rock Paper Scissors</h1>
         <div id = "welcome-screen">
             <form id = "name-form">
-                <div>
+                <div class = "form-group">
                     <label for="username">Your Name</label>
                     <input id = "username" placeholder = "Enter Name Here..." name = "username" class = "form-control">
                 </div>
